--- a/Roles/jpaybar.Apache2/vars/centos_vars.yml
+++ b/Roles/jpaybar.Apache2/vars/centos_vars.yml
@@ -1,19 +1,14 @@
 ---
 # vars file for jpaybar.Apache2
 
-vhost:
-  ip: "{{ ansible_host }}"
+apache:
   #listen:
     #- http: 80
     #- https: 443
-  serverName: "myapacheserver"
-  documentRoot: "/var/www/myapacheserver"
   certLocation: "/etc/pki/tls/certs/myapacheserver.crt"
   certKeyLocation: "/etc/pki/tls/private/myapacheserver.key"
 
 install_packages:
   - httpd
   - mod_ssl
-  
-ansible_operator: "vagrant"
   
