--- a/Roles/jpaybar.Apache2/tasks/centos.yml
+++ b/Roles/jpaybar.Apache2/tasks/centos.yml
@@ -12,8 +12,8 @@
 - name: Copy SSL certificate files
   copy: src={{ item.src }} dest={{ item.dest }} mode={{ item.mode }} owner={{ item.owner }} group={{ item.group }} 
   with_items:
-    - { src: "myapacheserver.crt", dest: "{{ vhost.certLocation }}", mode: "0644", owner: "root", group: "root" }
-    - { src: "myapacheserver.key", dest: "{{ vhost.certKeyLocation }}", mode: "0600", owner: "root", group: "root" }
+    - { src: "myapacheserver.crt", dest: "{{ apache.certLocation }}", mode: "0644", owner: "root", group: "root" }
+    - { src: "myapacheserver.key", dest: "{{ apache.certKeyLocation }}", mode: "0600", owner: "root", group: "root" }
   tags: Copy_certfiles
 #################################################################################################################
 
